prevent outbound paths of a node edge from overlapping when the destination nodes are on different ranks

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ textarea {
 
 html, body { margin:0; padding:0; overflow:hidden; width:100%; height:100%; background:#eee;}
 h1 {position:absolute;}
-#breadcrumbs {position:absolute; font-size:16px;}
+#breadcrumbs {position:absolute; font-size:12px;}
 #display_svg {display:block; margin:0 auto; width:90%; height:100%;}
 #layout_svg {position:absolute; overflow:hidden; top:0; left:20000px;}
 
